<!--
  ~ Copyright (c) 2017.
  ~  山东冠世信息工程有限公司 版权所有
  ~  创建者 李竹楠
  -->

<resources>
    <string name="app_name">蜂巡管控专家</string>

    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="re_password">确认密码</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="username_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="d_password_hint">请输入设备密码</string>
    <string name="d_first_password_hint">请输入设备密码，检测到您是第一次登录系统，建议更改默认密码</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="s1">管理更加方便快捷</string>
    <string name="s2">如何使用</string>
    <string name="s3">工具激活</string>
    <string name="s4">购买权限</string>
    <string name="s5">登录</string>
    <string name="s6">立即体验</string>
    <string name="userapp">用户应用</string>
    <string name="systemapp">系统应用</string>
    <string name="controlapp">管控应用</string>
    <string name="policy">管控策略</string>
    <string name="pkg">包名:</string>
    <string name="ver">版本号:</string>
    <string name="des">介绍:</string>
    <string name="input_password">请输入密码</string>
    <string name="entry_app">进入管控系统</string>
    <string name="exit">退出</string>
    <string name="entry">确定</string>
    <string name="cancel">取消</string>
    <string name="has_control">已管控</string>
    <string name="not_control">无管控</string>
    <string name="has_select">已选择</string>
    <string name="add_policy">添加策略</string>
    <string name="add_policy_msg">请选择已有策略或者新建策略</string>
    <string name="cancel_cre">取消新建</string>
    <string name="cre_policy">新建策略</string>
    <string name="faild_chose_policy">添加失败，请选择策略</string>
    <string name="faild_cre_policy">添加失败，请新建策略</string>
    <string name="delete">删除</string>
    <string name="delete_policy">删除策略</string>
    <string name="is_delete">是否删除策略：</string>
    <string name="delete_success">删除成功</string>
    <string name="loading">获取数据</string>
    <string name="waiting">数据加载中，请稍后…</string>
    <string name="userinfo">用户中心</string>
    <string name="sdk_low">检测到系统版本低，无法适配设备</string>
    <string name="adb_unenable">检测到USB未开启，请启动</string>
    <string name="enable">启动</string>
    <string name="has_not_device_owner">没有权限，请用激活工具激活</string>
    <string name="time_error">获取本地时间错误，请重新联网并在设置中调为自动获取时间</string>
    <string name="user_info">个人信息</string>
    <string name="device_info">设备信息</string>
    <string name="user_idea">用户反馈</string>
    <string name="phone">手机号</string>
    <string name="email">邮箱</string>
    <string name="d_password">设备密码</string>
    <string name="activate_state">绑定状态</string>
    <string name="device_name">设备名称</string>
    <string name="device_api">设备版本号</string>
    <string name="device_ID">设备ID</string>
    <string name="cancel_activate">取消激活设备</string>
    <string name="is_cancel_activate">是否取消设备激活状态，取消激活后将退出系统</string>
    <string name="net_failed">网络异常</string>
    <string name="not_registered">设备未注册</string>
    <string name="use_time_out">余额不足，请充值</string>
    <string name="subtime">提交时间</string>
    <string name="submit">提交</string>
    <string name="userlogin">用户登录</string>
    <string name="logning">登陆中，请稍后…</string>
    <string name="registing">注册中，请稍后…</string>
    <string name="changeing">修改中，请稍后…</string>
    <string name="login_failed">登录失败</string>
    <string name="passowrd_error">密码错误</string>
    <string name="password_or_username_error">账号或密码错误</string>
    <string name="useridea">用户反馈信息</string>
    <string name="password_anwer">密保问题</string>
    <string name="password_q">密保答案</string>
    <string name="regist_code">激活码</string>
    <string name="invite_code">邀请码</string>
    <string name="registed">激活</string>
    <string name="reset">重置</string>
    <string name="tagismsut">*标记为必填项</string>
    <string name="username_not_null">用户名不能为空</string>
    <string name="password_not_null">密码不能为空</string>
    <string name="phone_not_null">手机号不能为空</string>
    <string name="password_a_not_null">密保问题不能为空</string>
    <string name="email_error">邮箱不合法</string>
    <string name="repassword_error">两次密码必须一致</string>
    <string name="password_tooshort">密码必须为6位以及以上或32位以下</string>
    <string name="username_tooshort">用户名必须为6位以及以上或32位以下</string>
    <string name="d_password_tooshort">设备密码必须为6位</string>
    <string name="old_password_error">旧密码错误，请重试</string>
    <string name="username_formaterror">用户名必须为数字或者是英文字母组成</string>
    <string name="password_formaterror">密码必须为数字或者英文字母或者特殊字符组成</string>
    <string name="phone_error">手机号码不合法，请输入正确手机号码</string>
    <string name="check_regist">请完善注册信息</string>
    <string name="check_login">请完善登录信息</string>
    <string name="check_msg">请完善信息</string>
    <string name="error">异常</string>
    <string name="server_error">服务器异常</string>
    <string name="username_repeat">用户名重复</string>
    <string name="username_error">用户名错误</string>
    <string name="phone_repeat">手机号码重复</string>
    <string name="registcode_error">激活码错误</string>
    <string name="bind_dervice">绑定设备</string>
    <string name="bind_dervice_m">绑定该设备，该账号剩余可绑定设备量为：</string>
    <string name="bind_success">绑定成功</string>
    <string name="bind_limit">绑定数量达到上限</string>
    <string name="binded">该设备已绑定</string>
    <string name="you_has_only">您还剩余</string>
    <string name="day_please_recharge">天，请及时充值以免影响正常使用</string>
    <string name="go_recharge">去充值</string>
    <string name="tryuser">目前您还是试用期用户，试用期为7天，如果想继续使用请购买正式版</string>
    <string name="go_buy">去购买</string>
    <string name="forget_pw"><b>忘记密码？</b></string>
    <string name="forget_pswd">忘记密码</string>
    <string name="userID">用户ID</string>
    <string name="oldPW">旧密码</string>
    <string name="newPW">新密码</string>
    <string name="changePw">更改密码</string>
    <string name="changePwInfo">请选择密保问题并填写用户名和密保答案</string>
    <string name="changePwMsg">请输入您的旧密码和新密码</string>
    <string name="new_pw_net_f">新密码起效，将在网络环境好的情况下上传</string>
    <string name="pw_success">新密码修改成功</string>
    <string name="forget_password_success">找回密码成功</string>
    <string name="forget_password_failed">无权限，请联系客服找回密码</string>
    <string name="submit_success">提交成功</string>
    <string name="recharge">充值</string>
    <string name="recharge_success">充值成功</string>
    <string name="recharge_failed">充值失败，请重试</string>
    <string name="please_input_regist_code">请输入35位激活码</string>
    <string name="regist_failed">注册失败，请退出重试</string>
    <string name="regist_json_failed">解析失败，请退出重试</string>
    <string name="aq_error">密保问题或者答案错误</string>
    <string name="pwback_success">密码找回成功，请查看底部弹框中找回的密码</string>
    <string name="copy">复制</string>
    <string name="policy_not_respect">策略不能重复</string>
    <string name="longclick_info">（长按选中应用进行添加管控策略）</string>
    <string name="longclick2_info">（长按选中应用进行删除管控应用）</string>
    <string name="longclick3_info">（长按选中应用进行删除管控策略）</string>
    <string name="info1">联系电话：0531–55516271  官网：guanshinfo.com</string>
    <string name="info2">山东冠世信息工程有限公司</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="action_settings">Settings</string>
</resources>
