<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017.
  ~  山东冠世信息工程有限公司 版权所有
  ~  创建者 李竹楠
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_userapp"
        android:icon="@drawable/ic_userapp_48dp"
        android:title="@string/userapp" />

    <item
        android:id="@+id/navigation_systemapp"
        android:icon="@drawable/ic_systemapp_48dp"
        android:title="@string/systemapp" />

    <item
        android:id="@+id/navigation_controlapp"
        android:icon="@drawable/ic_controlapp_48dp"
        android:title="@string/controlapp" />
    <item
        android:id="@+id/navigation_policy"
        android:icon="@drawable/ic_policy_48dp"
        android:title="@string/policy" />

</menu>
